Feature/chapter-2-expression (#10)
* ✨ Feat : Chapter 2: Ex 6 to 14
* 🔄 Refactor : replace unnecessary Integer to int